# Chess

./: .gitignore  BrainStorm.txt  BrainStormAlex.txt  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/: Square.cpp  Square.h  main.cpp
src/Board/: Board.cpp  Board.h  Square.cpp  Square.h
src/Graph/: Arc.cpp  Arc.h  Graph.h  Node.cpp  Node.h
src/Pieces/: AbsPiece.cpp  AbsPiece.h
src/Pieces/Rook/: Rook.cpp  Rook.h
src/Tree/: Tree.cpp  Tree.h
src/view/: Game.cpp  Game.h
